--- a/src/Home/slider/Slider.css
+++ b/src/Home/slider/Slider.css
@@ -1,5 +1,7 @@
+.sliderContainer {
+  overflow: hidden;
+}
 .txt-bg {
-
   font-family: "RedFive";
   font-style: normal;
   font-weight: 400;
@@ -7,7 +9,7 @@
   letter-spacing: 0.005em;
   color: #000000;
 }
-.txt-bg-2{
+.txt-bg-2 {
   font-family: "RedFive";
   font-style: normal;
   font-weight: 400;
@@ -15,7 +17,6 @@
   letter-spacing: 0.005em;
   color: red;
   margin-left: 10%;
-
 }
 .scroll-container {
   overflow: hidden;
@@ -28,7 +29,7 @@
   -moz-transform: translateX(-100%);
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
-  
+
   -moz-animation: my-animation 15s linear infinite;
   -webkit-animation: my-animation 15s linear infinite;
   animation: my-animation 15s linear infinite;
@@ -36,14 +37,22 @@
 
 /* for Firefox */
 @-moz-keyframes my-animation {
-  from { -moz-transform: translateX(-100%); }
-  to { -moz-transform: translateX(100%); }
+  from {
+    -moz-transform: translateX(-100%);
+  }
+  to {
+    -moz-transform: translateX(100%);
+  }
 }
 
 /* for Chrome */
 @-webkit-keyframes my-animation {
-  from { -webkit-transform: translateX(-100%); }
-  to { -webkit-transform: translateX(100%); }
+  from {
+    -webkit-transform: translateX(-100%);
+  }
+  to {
+    -webkit-transform: translateX(100%);
+  }
 }
 
 @keyframes my-animation {
@@ -58,7 +67,7 @@
     transform: translateX(100%);
   }
 }
-.txt-bg-2{
+.txt-bg-2 {
   color: none;
   stroke: #000000;
 }
