--- a/src/Home/tokens/tokens.css
+++ b/src/Home/tokens/tokens.css
@@ -1,3 +1,6 @@
+.tokenContainer {
+  overflow: hidden;
+}
 .tokens-bg {
   background-image: url("../../Assets/Images/Group9.png");
   background-size: cover;
@@ -62,5 +65,5 @@
   letter-spacing: 0.215em;
   text-transform: uppercase;
   display: flex;
-align-items: center;
+  align-items: center;
 }
